// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index_including.sql > line 1 1`] = `
[
  "/*
 * 1.test CREATE INDEX
 *
 * Deliberately avoid dropping objects in this section, to get some pg_dump
 * coverage.
 */

-- Regular index with included columns
CREATE TABLE tbl_include_reg (c1 int, c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 175,
              "relname": "tbl_include_reg",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 192,
                  "typeName": {
                    "location": 195,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 200,
                  "typeName": {
                    "location": 203,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 208,
                  "typeName": {
                    "location": 211,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 216,
                  "typeName": {
                    "location": 219,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 13 1`] = `
[
  "CREATE INDEX ON tbl_include_reg (c1, c2) INCLUDE (c1, c3)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "indexIncludingParams": [
              {
                "IndexElem": {
                  "name": "c1",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
              {
                "IndexElem": {
                  "name": "c3",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "indexParams": [
              {
                "IndexElem": {
                  "name": "c1",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
              {
                "IndexElem": {
                  "name": "c2",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 16,
              "relname": "tbl_include_reg",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 20 1`] = `
[
  "CREATE TABLE tbl_include_unique1 (c1 int, c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl_include_unique1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 37,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 42,
                  "typeName": {
                    "location": 45,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 50,
                  "typeName": {
                    "location": 53,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 58,
                  "typeName": {
                    "location": 61,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 30 1`] = `
[
  "CREATE TABLE tbl_include_unique2 (c1 int, c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl_include_unique2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 37,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 42,
                  "typeName": {
                    "location": 45,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 50,
                  "typeName": {
                    "location": 53,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 58,
                  "typeName": {
                    "location": 61,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 36 1`] = `
[
  "CREATE TABLE tbl_include_pk (c1 int, c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl_include_pk",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 40,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 45,
                  "typeName": {
                    "location": 48,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 53,
                  "typeName": {
                    "location": 56,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 43 1`] = `
[
  "CREATE TABLE tbl_include_box (c1 int, c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl_include_box",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 41,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 46,
                  "typeName": {
                    "location": 49,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 54,
                  "typeName": {
                    "location": 57,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 52 1`] = `
[
  "CREATE TABLE tbl_include_box_pk (c1 int, c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl_include_box_pk",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 49,
                  "typeName": {
                    "location": 52,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 57,
                  "typeName": {
                    "location": 60,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 65 1`] = `
[
  "INSERT INTO tbl SELECT 1, 2, 3*x, box('4,4,4,4') FROM generate_series(1,10) AS x",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "x",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 70,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10,
                                        },
                                        "location": 72,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 54,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 23,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 23,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 26,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 26,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 29,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 3,
                              },
                              "location": 29,
                            },
                          },
                          "location": 30,
                          "name": [
                            {
                              "String": {
                                "sval": "*",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "x",
                                  },
                                },
                              ],
                              "location": 31,
                            },
                          },
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 34,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 38,
                                "sval": {
                                  "sval": "4,4,4,4",
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "box",
                              },
                            },
                          ],
                          "location": 34,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 68 1`] = `
[
  "CREATE TABLE tbl (c1 int,c2 int, c3 int, c4 box,
				CONSTRAINT covering PRIMARY KEY(c1,c2) INCLUDE(c3,c4))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 18,
                  "typeName": {
                    "location": 21,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "Constraint": {
                  "conname": "covering",
                  "contype": "CONSTR_PRIMARY",
                  "including": [
                    {
                      "String": {
                        "sval": "c3",
                      },
                    },
                    {
                      "String": {
                        "sval": "c4",
                      },
                    },
                  ],
                  "keys": [
                    {
                      "String": {
                        "sval": "c1",
                      },
                    },
                    {
                      "String": {
                        "sval": "c2",
                      },
                    },
                  ],
                  "location": 53,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 77 1`] = `
[
  "select * from tbl where (c1,c2,c3) < (2,5,1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "RowExpr": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c1",
                              },
                            },
                          ],
                          "location": 25,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c2",
                              },
                            },
                          ],
                          "location": 28,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c3",
                              },
                            },
                          ],
                          "location": 31,
                        },
                      },
                    ],
                    "location": 24,
                    "row_format": "COERCE_IMPLICIT_CAST",
                  },
                },
                "location": 35,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "RowExpr": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 38,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 5,
                          },
                          "location": 40,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 42,
                        },
                      },
                    ],
                    "location": 37,
                    "row_format": "COERCE_IMPLICIT_CAST",
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 80 1`] = `
[
  "SET enable_seqscan = off",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 21,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 82 1`] = `
[
  "select * from tbl where (c1,c2,c3) < (262,1,1) limit 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitCount": {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 53,
              },
            },
            "limitOption": "LIMIT_OPTION_COUNT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "RowExpr": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c1",
                              },
                            },
                          ],
                          "location": 25,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c2",
                              },
                            },
                          ],
                          "location": 28,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c3",
                              },
                            },
                          ],
                          "location": 31,
                        },
                      },
                    ],
                    "location": 24,
                    "row_format": "COERCE_IMPLICIT_CAST",
                  },
                },
                "location": 35,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "RowExpr": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 262,
                          },
                          "location": 38,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 42,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 44,
                        },
                      },
                    ],
                    "location": 37,
                    "row_format": "COERCE_IMPLICIT_CAST",
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 87 1`] = `
[
  "CREATE TABLE tbl (c1 int,c2 int, c3 int, c4 box,
				UNIQUE(c1,c2) INCLUDE(c3,c4))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 18,
                  "typeName": {
                    "location": 21,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "Constraint": {
                  "contype": "CONSTR_UNIQUE",
                  "including": [
                    {
                      "String": {
                        "sval": "c3",
                      },
                    },
                    {
                      "String": {
                        "sval": "c4",
                      },
                    },
                  ],
                  "keys": [
                    {
                      "String": {
                        "sval": "c1",
                      },
                    },
                    {
                      "String": {
                        "sval": "c2",
                      },
                    },
                  ],
                  "location": 53,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 95 1`] = `
[
  "CREATE TABLE tbl (c1 int,c2 int, c3 int, c4 box,
				PRIMARY KEY(c1,c2) INCLUDE(c3,c4))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 18,
                  "typeName": {
                    "location": 21,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "Constraint": {
                  "contype": "CONSTR_PRIMARY",
                  "including": [
                    {
                      "String": {
                        "sval": "c3",
                      },
                    },
                    {
                      "String": {
                        "sval": "c4",
                      },
                    },
                  ],
                  "keys": [
                    {
                      "String": {
                        "sval": "c1",
                      },
                    },
                    {
                      "String": {
                        "sval": "c2",
                      },
                    },
                  ],
                  "location": 53,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 105 1`] = `
[
  "CREATE TABLE tbl (c1 int,c2 int, c3 int, c4 box,
				EXCLUDE USING btree (c1 WITH =) INCLUDE(c3,c4))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 18,
                  "typeName": {
                    "location": 21,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "Constraint": {
                  "access_method": "btree",
                  "contype": "CONSTR_EXCLUSION",
                  "exclusions": [
                    {
                      "List": {
                        "items": [
                          {
                            "IndexElem": {
                              "name": "c1",
                              "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                              "ordering": "SORTBY_DEFAULT",
                            },
                          },
                          {
                            "List": {
                              "items": [
                                {
                                  "String": {
                                    "sval": "=",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "including": [
                    {
                      "String": {
                        "sval": "c3",
                      },
                    },
                    {
                      "String": {
                        "sval": "c4",
                      },
                    },
                  ],
                  "location": 53,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 114 1`] = `
[
  "/*
 * 3.0 Test ALTER TABLE DROP COLUMN.
 * Any column deletion leads to index deletion.
 */
CREATE TABLE tbl (c1 int,c2 int, c3 int, c4 int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 105,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 110,
                  "typeName": {
                    "location": 113,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 117,
                  "typeName": {
                    "location": 120,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 125,
                  "typeName": {
                    "location": 128,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 133,
                  "typeName": {
                    "location": 136,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 125 1`] = `
[
  "/*
 * 3.1 Test ALTER TABLE DROP COLUMN.
 * Included column deletion leads to the index deletion,
 * AS well AS key columns deletion. It's explained in documentation.
 */
CREATE TABLE tbl (c1 int,c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 183,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 188,
                  "typeName": {
                    "location": 191,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 195,
                  "typeName": {
                    "location": 198,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 203,
                  "typeName": {
                    "location": 206,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 211,
                  "typeName": {
                    "location": 214,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 150 1`] = `
[
  "/*
 * 3.3 Test ALTER TABLE SET STATISTICS
 */
CREATE TABLE tbl (c1 int, c2 int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 59,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 64,
                  "typeName": {
                    "location": 67,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 72,
                  "typeName": {
                    "location": 75,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 184 1`] = `
[
  "/*
 * 7. Check various AMs. All but btree, gist and spgist must fail.
 */
CREATE TABLE tbl (c1 int,c2 int, c3 box, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 87,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 92,
                  "typeName": {
                    "location": 95,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 99,
                  "typeName": {
                    "location": 102,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 107,
                  "typeName": {
                    "location": 110,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 115,
                  "typeName": {
                    "location": 118,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 206 1`] = `
[
  "UPDATE tbl SET c2 = 2 WHERE c1 = 1",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "tbl",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 15,
                  "name": "c2",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 20,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c1",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
                "location": 31,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 33,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including.sql > line 219 1`] = `
[
  "DROP TABLE tbl",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tbl",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
